--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
-@import "/reset.css";
-@import "/_component.css";
+@import "reset.css";
+@import "_component.css";
 
 ul {
   color: var(--clr-primary);
